# AI-Screener

./: .env.example  Dockerfile  README.md  README_AI_RESEARCH.md  config.yaml  main.py  pyproject.toml  requirements.txt  requirements_ai.txt  research_main.py
.github/workflows/: screener.yml
ai_research/: __init__.py  alert_formatter.py  gemini_analyzer.py  groq_analyzer.py  market_news_fetcher.py  prompts.py  research_engine.py
dashboard/: app.py  research_dashboard.py
screener/: __init__.py  alerts.py  data_fetcher.py  fundamental_analyzer.py  news_analyzer.py  options_analyzer.py  scorer.py  screener.py  smart_money.py  technical_analyzer.py  volume_analyzer.py
scripts/: run_scheduler.py  run_screener.sh
tests/: test_ai_research.py  test_screener.py
