[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "india-stock-screener"
version = "1.0.0"
description = "Institutional-grade stock screener for NSE/BSE — Intraday, BTST, Swing"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["stocks", "nse", "bse", "trading", "screener", "india", "finance"]

[project.scripts]
india-screen = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["screener*", "dashboard*", "scripts*"]
